syntax="proto3";

option  go_package = "../pb";

package pb;

option csharp_namespace="Pb";   //给C#提供的选项

//MsgID:1 同步客户端玩家ID
message SyncPid{
  int32 Pid = 1;
}

//MsgID:3 Move 玩家移动
message Move{
  int32 Pid = 1;
  Position Pos = 2;
}

//玩家位置
message Position{
  float X = 1;
  float Y = 2;
  float Z = 3;
  float V = 4;
}

//MsgID:200 玩家广播数据
//Tp: 1 世界聊天, 2 坐标, 3 动作, 4 移动之后坐标信息更新
message BroadCast{
  int32 Pid = 1;
  int32 Tp = 2;
  oneof Data {
    string Content = 3;  //世界聊天内容
    Position P = 4;      //坐标
    int32 ActionData = 5; //行为
  }
}

//MsgID:2 聊天
message Talk {
  int32 Pid = 1;
  string Content = 2;
}

//MsgID:202 显示周围的玩家
message SyncPlayer {
  repeated Player Ps = 1;
}

message Player {
  int32 Pid = 1; //玩家id
  Position p = 2; //玩家位置
}